7.x-1.13.x
 - #1752 Added option for using quote delimiters when fast import is enabled for dkan datastore. Fixed error message when an import fails on DKAN Datastore Fast Import.
 - #1703 Refactor Datastore API module, fixing some caching issues and improving joins 
 - #1804 Add project = dkan to dkan_sitewide.info to fix errors on update screen.

7.x-1.13.2 2017-03-16
----------------------
 - #1803 Fix broken access to featured groups sort order view. 
 - #1796 Fix Harvest support for contact name and contact email.
 - #1795 Update front page test on topics.feature with @customizable.
 - #1783 Update services to 3.19
 - #1794 Update visualization_entity to 1.1
 - #1781 Update views to 3.15 and remove patch 1388684.
 - #1751 Add POD validation link to command center menu for site manager access.
 - #1762 Re-number update hooks that were mixed up during release integration.
 - #1709 Changed function dkan sitewide conversion homepage to fix problem with link entity attribute. This attribute need to be a boolean.
 - #1742 Fix home page HTML <head><title> so that it's just the site name (not the node or panel title)
 - #1747 Update DKAN API link to use the RTD documentation page.
 - #1730 Fix logic error for front page in theme causing error messages on homepage
 - #1728 Added a tag @defaultHomepage to a topic test which relies on homepage content.
 - #5807 Fix panelizer permissions to hide 'Customize Display' button
 - #1744 Grant Site Manager role Harvest Dashboard actions.
 - #1776 Fix 500 errors when linking or uploading geojson files in resources.
 - #1767 Better handling of empty values by datastore_api. Also see NuCivic/feeds_flatstore_processor#9

7.x-1.13
--------------------------
 - #1719 Added site details to settings nuboot_radix to allow change site name, slogan, e-amail address for site manager.
 - #1717 Upgrading Drupal to 7.54
 - #1705 Added css for chart visualizaitons, fixes issue in IE.
 - #1695 Upgrade better_exposed_filters to v3.4.